# CrimsonDesert-UltimateModsManager

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINUX.md  MACOS.md  NEXUS_DESCRIPTION.bbcode  README.md  RELEASE_NOTES_v3.1.7.1.md  RELEASE_NOTES_v3.1.7.2.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.md  RELEASE_NOTES_v3.3.16.md  RELEASE_NOTES_v3.3.17.md  RELEASE_NOTES_v3.3.18.md  RELEASE_NOTES_v3.3.19.md  RELEASE_NOTES_v3.3.20.md  SECURITY.md  cdmm.spec  cdumm-macos.spec  cdumm.spec  pyproject.toml  tmp_diag.py
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  feature_request.yml  mod_compatibility.yml  question.yml
.github/workflows/: release-macos.yml  release-nexusmods.yml  release-windows.yml  windows-tests.yml
docs/: EXTRACT_FIELD_ORDER.md  FORMAT3_OPS.md  FORMAT3_OP_GAPS.md  GAME_DATA_UNLOCK_ROADMAP.md  GEAR_STATS.md
field_schema/: README.md  skill.json
native/: Cargo.toml  pyproject.toml
native/src/: crypto.rs  dds.rs  hashlittle.rs  lib.rs  lz4_util.rs  overlay.rs  patcher.rs  paz.rs
schemas/: NOTICE  pabgb_complete_schema.json  pabgb_type_overrides.json
scripts/: build-macos.sh  build.py  cdumm-linux-native.sh  cdumm-linux.sh  check_snapshot_vs_disk.py  coverage_scan.py  sample_hashes.py
src/cdmm/: main.py
src/cdmm/archive/: papgt_manager.py
src/cdmm/engine/: apply_engine.py  delta_engine.py  import_handler.py  mod_health_check.py
src/cdmm/gui/: asi_panel.py  health_check_dialog.py  main_window.py
src/cdumm/: __init__.py  cli.py  main.py  platform.py  worker_process.py
src/cdumm/_vendor/: BUFFINFO_RE_NOTES.md  buffinfo_parser.py  iteminfo_parser.py  nattkh_skillinfo_parser.py  skillinfo_parser.py
src/cdumm/archive/: hashlittle.py  overlay_builder.py  papgt_manager.py  pathc_handler.py  paz_crypto.py  paz_parse.py  paz_repack.py  transactional_io.py
src/cdumm/asi/: asi_manager.py
src/cdumm/engine/: activity_log.py  apply_engine.py  binary_search.py  cdmod_handler.py  cdmods_paths.py  characterinfo_writer.py  compiled_merge.py  configurable_scanner.py  conflict_detector.py  crimson_browser_handler.py  crimson_rs_loader.py  css_patch_handler.py  delta_engine.py  dropset_writer.py  equipslotinfo_writer.py  field_schema.py  format3_apply.py  format3_builder.py  format3_handler.py  game_index.py  game_monitor.py  gear_stat_view.py  gear_stats.py  html_patch_handler.py  import_handler.py  ini_line_editor.py  (+49 more)
tests/: _iteminfo_ref_oracle.py  conftest.py  fixture_loaders.py  pamt_synth.py  test_about_link_card_row_click.py  test_aggregator_tags_source_mod_id.py  test_apply_blocked_by_stale_snapshot.py  test_apply_button_label_dirty.py  test_apply_byte_patches_malformed_hex.py  test_apply_byte_patches_out_of_range.py  test_apply_byte_patches_stale_signature.py  test_apply_defers_destructive_deletes.py  test_apply_drops_whole_tainted_mod.py  test_apply_engine.py  test_apply_filenotfound_path_visibility.py  test_apply_precheck_corrupt_mods.py  test_apply_priority_ordering.py  test_apply_signature_malformed_hex.py  test_apply_skipped_patches_surfaced.py  test_apply_temp_dir_cleanup.py  test_apply_watchdog.py  test_archive_wide_mutex.py  test_asi_disabled_update_no_dup.py  test_asi_install_uninstall_symmetry.py  test_asi_legacy_uninstall_scoped.py  test_asi_loader_auto_install_toggle.py  test_asi_manager.py  test_asi_nexus_columns_populated_and_queried.py  test_asi_plugin_state_nexus_columns.py  test_asi_rename_uses_raw_name.py  test_asi_staging_persistence.py  test_asi_update_backs_up_ini.py  test_auto_bisect_worker_module.py  test_b1_validator_no_false_positive.py  test_b3_precheck_no_false_positive.py  test_backup_phase_emits_per_file_progress.py  test_batch_import_rollback.py  test_batch_reimport_from_source.py  test_batch_result_index_matching.py  test_bom_and_sniff_tolerance.py  (+394 more)
tools/: extract_field_order.py
tools/cd-game-index/: README.md  cd_data_index.py
tools/re/: README.md  iteminfo_tail_grammar.py  iteminfo_tail_identify.py  iteminfo_tail_solve_nested.py
(+110 files in other folders)
