[project]
name = "cdumm"
version = "3.5.0"
description = "Crimson Desert Ultimate Mods Manager: archive-aware mod composition with conflict detection"
requires-python = ">=3.10"
dependencies = [
    "pyside6-essentials>=6.6",
    "PySide6-Fluent-Widgets>=1.11",
    "bsdiff4>=1.2",
    "lz4>=4.3",
    "cryptography>=42.0",
    "privatebin>=0.3.0",
    "lxml>=5.0",
    # Game Data texture preview: game_index.decode_image() decodes the
    # game's DDS textures with Pillow. It was never declared, so it was
    # absent from the exe (and from CI, where the one test covering it
    # skipped on "No module named PIL") and the preview silently no-op'd.
    "pillow>=10.0",
    "psutil>=5.9",
    "certifi>=2024.0",
    "py7zr>=1.0",
    "xxhash>=3.4",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-xdist>=3.5",
    "pyinstaller>=6.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavy full-table iteminfo round-trip tests (pure-Python parse of the 6k-record game table, ~150-530s each); run in the separate slow-tests job, not the fast per-PR job",
]
