[project]
name = "cdumm"
version = "3.5.0"
description = "Crimson Desert Ultimate Mods Manager: archive-aware mod composition with conflict detection"
requires-python = ">=3.10"
dependencies = [
    "pyside6-essentials>=6.6",
    "PySide6-Fluent-Widgets>=1.11",
    "bsdiff4>=1.2",
    "lz4>=4.3",
    "cryptography>=42.0",
    "privatebin>=0.3.0",
    "lxml>=5.0",
    "psutil>=5.9",
    "certifi>=2024.0",
    "py7zr>=1.0",
    "xxhash>=3.4",
    "websocket-client>=1.7",
    # Pillow decodes DDS textures (DXT/BC1-7) for the Game Data preview. Must
    # be a real dependency AND bundled by the .spec, or shipped builds show
    # every texture as "no visual decoder" hex.
    "Pillow>=10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-xdist>=3.5",
    "pyinstaller>=6.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# tools/re/* are reverse-engineering PROBES, not shipped code: dense
# one-liners that were used to derive the CD 1.13 record tail grammar and are
# kept as the reference for how it was derived (see tools/re/README.md).
# Reformatting them to lint rules would obscure the thing they exist to show.
# They ship in no build and import nothing from the app.
"tools/re/*.py" = ["E701", "E702", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: heavy full-table iteminfo round-trip tests (pure-Python parse of the 6k-record game table, ~150-530s each); run in the separate slow-tests job, not the fast per-PR job",
]
